--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,9 @@
 ---
-# defaults file for .
+maas_snap_channel: "3.2/stable"
+
+maas_install_test_db: true
+maas_db_uri: "maas-test-db:///"
+
+maas_admin_name: "maas"
+maas_admin_password: "maas"
+maas_admin_email: "maas@example.com"
