--- a/molecule/default/create.yml
+++ b/molecule/default/create.yml
@@ -1,36 +1,27 @@
 ---
-- name: Create
+- name: Test
   hosts: localhost
   connection: local
   gather_facts: false
-  no_log: "{{ molecule_no_log }}"
+  collections:
+    - community.general
   tasks:
+    - name: Create a jammy container
+      community.general.lxd_container:
+        name: maas-2204
+        source:
+          type: image
+          mode: pull
+          protocol: simplestreams
+          server: https://cloud-images.ubuntu.com/releases
+          alias: '22.04'
+        profiles:
+          - default
+          - molecule
+        wait_for_ipv4_addresses: true
+        timeout: 600
+      register: lxd_instance_config
 
-    # TODO: Developer must implement and populate 'server' variable
-
-    - name: Demo
-      when: server.changed | default(false) | bool
-      block:
-        - name: Populate instance config dict
-          ansible.builtin.set_fact:
-            instance_conf_dict: {
-              'instance': "{{ }}",
-              'address': "{{ }}",
-              'user': "{{ }}",
-              'port': "{{ }}",
-              'identity_file': "{{ }}", }
-          with_items: "{{ server.results }}"
-          register: instance_config_dict
-
-        - name: Convert instance config dict to a list
-          ansible.builtin.set_fact:
-            instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
-
-        - name: Dump instance config
-          ansible.builtin.copy:
-            content: |
-              # Molecule managed
-
-              {{ instance_conf | to_json | from_json | to_yaml }}
-            dest: "{{ molecule_instance_config }}"
-            mode: 0600
+    - name: Debug print
+      debug:
+        var: lxd_instance_config
