--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
     - "main"
+    paths:
+    - "defaults/**"
+    - "tasks/**"
   pull_request:
     branches:
     - "main"
